# FxAutoTradde

./: .env.example  .gitignore  AGENTS.md  FXAutoTradeLab.spec  README.md  pyproject.toml
configs/: backtest_baseline.yaml  backtest_fx_breakout.yaml  backtest_multitimeframe_scoring.yaml  demo_local.yaml  live_alpaca_disabled.yaml  mac_desktop_default.yaml  paper_alpaca_free.yaml  paper_alpaca_plus.yaml  realtime_gmo_public.yaml  scalping_jforex.yaml
docs/: architecture.md  economic_data_sources.md  free_plan_notes.md  future_live_trading.md  mac_packaging.md  paper_vs_live.md  safety.md  strategy_engine.md
fxautotrade_lab/: __init__.py
resources/: app_icon.icns
scripts/: desktop_entry.py  launch_desktop_macos.sh  package_macos_app.sh
tests/: conftest.py  scalping_helpers.py  test_alpaca_integration_optional.py  test_application_connectivity.py  test_application_scalping_methods.py  test_automation.py  test_backtest_and_reporting.py  test_cli_smoke.py  test_config_loading.py  test_data_and_features.py  test_desktop_runtime.py  test_desktop_smoke.py  test_feature_integrity.py  test_fx_ml_research.py  test_fx_rule_only.py  test_keychain_credentials.py  test_market_data_service_sync.py  test_notifications.py  test_persistence_and_safety.py  test_prompt_contract.py  test_scalping_broker_plan.py  test_scalping_calibration_export.py  test_scalping_costs.py  test_scalping_features_no_lookahead.py  test_scalping_model_operations.py  test_scalping_model_promotion.py  test_scalping_outcome_store_integration.py  test_scalping_policy_parity.py  test_scalping_reports_gui.py  (+11 more)
(+126 files in other folders)
